// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringEqualLength(5) expectTypeFailure(1): TYPE_FAILURE::StringEqualLength(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Invalid value 1 supplied to String",
      "path": Array [],
    },
  ],
  "value": 1,
}
`;

exports[`StringEqualLength(5) expectTypeFailure(4444): TYPE_FAILURE::StringEqualLength(4444) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "4444",
      "expected": [Function],
      "message": "Invalid value \\"4444\\" supplied to StringEqualLength",
      "path": Array [],
    },
  ],
  "value": "4444",
}
`;

exports[`StringEqualLength(5) expectTypeFailure(666666): TYPE_FAILURE::StringEqualLength(666666) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "666666",
      "expected": [Function],
      "message": "Invalid value \\"666666\\" supplied to StringEqualLength",
      "path": Array [],
    },
  ],
  "value": "666666",
}
`;
